# svmivacy

./: .gitignore  Anchor.toml  Cargo.toml  README.md  global.md
contracts/: Cargo.toml
contracts/src/: lib.rs  privacy_layer.rs  smart_contracts.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: PrivacyControls.tsx  TradingInterface.tsx  WalletIntegration.tsx
frontend/src/styles/: App.css
scripts/: build.sh  deploy.sh  test.sh
tests/: integration_tests.rs  mod.rs  unit_tests.rs
