# Cargo.toml
# Configuration file for Rust project dependencies 

[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "=0.24.2"
solana-program = "=1.9.13"
thiserror = "1.0"

[dev-dependencies]
anchor-spl = "=0.24.2"
solana-program-test = "=1.9.13"
solana-sdk = "=1.9.13"
tokio = { version = "~1.14.1", features = ["full", "macros", "rt", "rt-multi-thread"] }